agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/c_api/cross_platform_c_api_wrapper.h

typedef void* view_t;
enum ERROR_CODE {
    ERROR_OK = 0,
    ERROR_INVALID_API_TYPE = -100,
    ERROR_INVALID_PARAM = -101,
    ERROR_PARSE_PARAMETER = -102,
    ERROR_NO_CURRENT_PARAMETER = -103,
    ERROR_NOT_SUPPORT_API = -4,
    ERROR_NOT_INITIALIZE_OBSERVER = -104,
    ERROR_NO_DEVICE = -105,
    ERROR_ENGINE_EXIST = -106,
    ERROR_NO_ENGINE = -107,
    ERROR_INVALID_DEVICE_TYPE = -108,
};
enum DEVICE_TYPE {
    PLAYBACK_DEVICE = 0,
    RECORDING_DEVICE = 1,
};
/** Maximum length of the device ID.
*/
enum MAX_DEVICE_ID_LENGTH_TYPE {
    /** The maximum length of the device ID is 512 bytes.
    */
    MAX_DEVICE_ID_LENGTH = 512
};
typedef void (*FUNC_OnChannelWarning)(const char* channelId, int warn, const char* msg);
typedef void (*FUNC_OnChannelError)(const char* channelId, int err, const char* msg);
typedef void (*FUNC_OnChannelJoinChannelSuccess)(const char* channelId, uid_t uid, int elapsed);
typedef void (*FUNC_OnChannelReJoinChannelSuccess)(const char* channelId, uid_t uid, int elapsed);
typedef void (*FUNC_OnChannelLeaveChannel)(const char* channelId, unsigned int duration, unsigned int txBytes, unsigned int rxBytes, unsigned int txAudioBytes, unsigned int txVideoBytes, unsigned int rxAudioBytes, unsigned int rxVideoBytes, unsigned short txKBitRate, unsigned short rxKBitRate, unsigned short rxAudioKBitRate, unsigned short txAudioKBitRate, unsigned short rxVideoKBitRate, unsigned short txVideoKBitRate, unsigned short lastmileDelay, unsigned short txPacketLossRate, unsigned short rxPacketLossRate, unsigned int userCount, double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio, int memoryAppUsageInKbytes);
typedef void (*FUNC_OnChannelClientRoleChanged)(const char* channelId, int oldRole, int newRole);
typedef void (*FUNC_OnChannelUserJoined)(const char* channelId, uid_t uid, int elapsed);
typedef void (*FUNC_OnChannelUserOffLine)(const char* channelId, uid_t uid, int reason);
typedef void (*FUNC_OnChannelConnectionLost)(const char* channelId);
typedef void (*FUNC_OnChannelRequestToken)(const char* channelId);
typedef void (*FUNC_OnChannelTokenPrivilegeWillExpire)(const char* channelId, const char* token);
typedef void (*FUNC_OnChannelRtcStats)(const char* channelId, unsigned int duration, unsigned int txBytes, unsigned int rxBytes, unsigned int txAudioBytes, unsigned int txVideoBytes, unsigned int rxAudioBytes, unsigned int rxVideoBytes, unsigned short txKBitRate, unsigned short rxKBitRate, unsigned short rxAudioKBitRate, unsigned short txAudioKBitRate, unsigned short rxVideoKBitRate, unsigned short txVideoKBitRate, unsigned short lastmileDelay, unsigned short txPacketLossRate, unsigned short rxPacketLossRate, unsigned int userCount, double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio, int memoryAppUsageInKbytes);
typedef void (*FUNC_OnChannelNetworkQuality)(const char* channelId, uid_t uid, int txQuality, int rxQuality);
typedef void (*FUNC_OnChannelRemoteVideoStats)(const char* channelId, uid_t uid, int delay, int width, int height, int receivedBitrate, int decoderOutputFrameRate, int rendererOutputFrameRate, int packetLossRate, int rxStreamType, int totalFrozenTime, int frozenRate, int totalActiveTime);
typedef void (*FUNC_OnChannelRemoteAudioStats)(const char* channelId, uid_t uid, int quality, int networkTransportDelay, int jitterBufferDelay, int audioLossRate, int numChannels, int receivedSampleRate, int receivedBitrate, int totalFrozenTime, int frozenRate, int totalActiveTime);
typedef void (*FUNC_OnChannelRemoteAudioStateChanged)(const char* channelId, uid_t uid, int state, int reason, int elapsed);
typedef void (*FUNC_OnChannelActiveSpeaker)(const char* channelId, uid_t uid);
typedef void (*FUNC_OnChannelVideoSizeChanged)(const char* channelId, uid_t uid, int width, int height, int rotation);
typedef void (*FUNC_OnChannelRemoteVideoStateChanged)(const char* channelId, uid_t uid, int state, int reason, int elapsed);
typedef void (*FUNC_OnChannelStreamMessage)(const char* channelId, uid_t uid, int streamId, const char* data, size_t length);
typedef void (*FUNC_OnChannelStreamMessageError)(const char* channelId, uid_t uid, int streamId, int code, int missed, int cached);
typedef void (*FUNC_OnChannelMediaRelayStateChanged2)(const char* channelId, int state, int code);
typedef void (*FUNC_OnChannelMediaRelayEvent2)(const char* channelId, int code);
typedef void (*FUNC_OnChannelRtmpStreamingStateChanged)(const char* channelId, const char* url, int state, int errCode);
typedef void (*FUNC_OnChannelTranscodingUpdated)(const char* channelId);
typedef void (*FUNC_OnChannelStreamInjectedStatus)(const char* channelId, const char* url, uid_t uid, int status);
typedef void (*FUNC_OnChannelRemoteSubscribeFallbackToAudioOnly)(const char* channelId, uid_t uid, BOOL isFallbackOrRecover);
typedef void (*FUNC_OnChannelConnectionStateChanged)(const char* channelId, int state, int reason);
typedef void (*FUNC_OnFacePositionChanged)(int imageWidth, int imageHeight, int x, int y, int width, int height, int vecDistance, int numFaces);
typedef void (*FUNC_OnChannelLocalPublishFallbackToAudioOnly)(const char* channelId, BOOL isFallbackOrRecover);
typedef void (*FUNC_OnChannelMediaRelayStateChanged)(int state, int code);
typedef void (*FUNC_OnChannelMediaRelayEvent)(int code);
typedef void (*FUNC_OnChannelTestEnd)(const char* channelId);
typedef void (*FUNC_OnJoinChannelSuccess)(const char*, uid_t uid, int elapsed);
typedef void (*FUNC_OnReJoinChannelSuccess)(const char*, uid_t uid, int elapsed);
typedef void (*FUNC_OnConnectionLost)();
typedef void (*FUNC_OnConnectionInterrupted)();
typedef void (*FUNC_OnLeaveChannel)(unsigned int duration, unsigned int txBytes, unsigned int rxBytes, unsigned int txAudioBytes, unsigned int txVideoBytes, unsigned int rxAudioBytes, unsigned int rxVideoBytes, unsigned short txKBitRate, unsigned short rxKBitRate, unsigned short rxAudioKBitRate, unsigned short txAudioKBitRate, unsigned short rxVideoKBitRate, unsigned short txVideoKBitRate, unsigned short lastmileDelay, unsigned short txPacketLossRate, unsigned short rxPacketLossRate, unsigned int userCount, double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio, int memoryAppUsageInKbytes);
typedef void (*FUNC_OnRequestToken)();
typedef void (*FUNC_OnUserJoined)(uid_t uid, int elapsed);
typedef void (*FUNC_OnUserOffline)(uid_t uid, int offLineReason);
typedef void (*FUNC_OnAudioVolumeIndication)(uid_t* uid, unsigned int* volume, unsigned int* vad, const char** channelId, int speakerNumber, int totalVolume);
typedef void (*FUNC_OnUserMuteAudio)(uid_t uid, BOOL muted);
typedef void (*FUNC_OnWarning)(int warn, const char* msg);
typedef void (*FUNC_OnError)(int error, const char* msg);
typedef void (*FUNC_OnRtcStats)(unsigned int duration, unsigned int txBytes, unsigned int rxBytes, unsigned int txAudioBytes, unsigned int txVideoBytes, unsigned int rxAudioBytes, unsigned int rxVideoBytes, unsigned short txKBitRate, unsigned short rxKBitRate, unsigned short rxAudioKBitRate, unsigned short txAudioKBitRate, unsigned short rxVideoKBitRate, unsigned short txVideoKBitRate, unsigned short lastmileDelay, unsigned short txPacketLossRate, unsigned short rxPacketLossRate, unsigned int userCount, double cpuAppUsage, double cpuTotalUsage, int gatewayRtt, double memoryAppUsageRatio, double memoryTotalUsageRatio, int memoryAppUsageInKbytes);
typedef void (*FUNC_OnAudioMixingFinished)();
typedef void (*FUNC_OnAudioRouteChanged)(int route);
typedef void (*FUNC_OnFirstRemoteVideoDecoded)(uid_t uid, int width, int height, int elapsed);
typedef void (*FUNC_OnVideoSizeChanged)(uid_t uid, int width, int height, int elapsed);
typedef void (*FUNC_OnClientRoleChanged)(int oldRole, int newRole);
typedef void (*FUNC_OnUserMuteVideo)(uid_t uid, BOOL muted);
typedef void (*FUNC_OnMicrophoneEnabled)(BOOL isEnabled);
typedef void (*FUNC_OnApiExecuted)(int err, const char* api, const char* result);
typedef void (*FUNC_OnFirstLocalAudioFrame)(int elapsed);
typedef void (*FUNC_OnFirstRemoteAudioFrame)(uid_t userId, int elapsed);
typedef void (*FUNC_OnLastmileQuality)(int quality);
typedef void (*FUNC_OnAudioQuality)(uid_t userId, int quality, unsigned short delay, unsigned short lost);
typedef void (*FUNC_OnStreamInjectedStatus)(const char* url, uid_t userId, int status);
typedef void (*FUNC_OnStreamUnpublished)(const char* url);
typedef void (*FUNC_OnStreamPublished)(const char* url, int error);
typedef void (*FUNC_OnStreamMessageError)(uid_t userId, int streamId, int code, int missed, int cached);
typedef void (*FUNC_OnStreamMessage)(uid_t userId, int streamId, const char* data, size_t length);
typedef void (*FUNC_OnConnectionBanned)();
typedef void (*FUNC_OnRemoteVideoTransportStats)(uid_t uid, unsigned short delay, unsigned short lost, unsigned short rxKBitRate);
typedef void (*FUNC_OnRemoteAudioTransportStats)(uid_t uid, unsigned short delay, unsigned short lost, unsigned short rxKBitRate);
typedef void (*FUNC_OnTranscodingUpdated)();
typedef void (*FUNC_OnAudioDeviceVolumeChanged)(int deviceType, int volume, BOOL muted);
typedef void (*FUNC_OnActiveSpeaker)(uid_t userId);
typedef void (*FUNC_OnMediaEngineStartCallSuccess)();
typedef void (*FUNC_OnMediaEngineLoadSuccess)();
typedef void (*FUNC_OnVideoStopped)();
typedef void (*FUNC_OnTokenPrivilegeWillExpire)(const char* token);
typedef void (*FUNC_OnNetworkQuality)(uid_t uid, int txQuality, int rxQuality);
typedef void (*FUNC_OnLocalVideoStats)(int sentBitrate, int sentFrameRate, int encoderOutputFrameRate, int rendererOutputFrameRate, int targetBitrate, int targetFrameRate, int qualityAdaptIndication, int encodedBitrate, int encodedFrameWidth, int encodedFrameHeight, int encodedFrameCount, int codecType);
typedef void (*FUNC_OnRemoteVideoStats)(uid_t uid, int delay, int width, int height, int receivedBitrate, int decoderOutputFrameRate, int rendererOutputFrameRate, int packetLossRate, int rxStreamType, int totalFrozenTime, int frozenRate, int totalActiveTime);
typedef void (*FUNC_OnRemoteAudioStats)(uid_t uid, int quality, int networkTransportDelay, int jitterBufferDelay, int audioLossRate, int numChannels, int receivedSampleRate, int receivedBitrate, int totalFrozenTime, int frozenRate, int totalActiveTime);
typedef void (*FUNC_OnLocalAudioStats)(int numChannels, int sentSampleRate, int sentBitrate);
typedef void (*FUNC_OnFirstLocalVideoFrame)(int width, int height, int elapsed);
typedef void (*FUNC_OnFirstRemoteVideoFrame)(uid_t uid, int width, int height, int elapsed);
typedef void (*FUNC_OnUserEnableVideo)(uid_t uid, BOOL enabled);
typedef void (*FUNC_OnAudioDeviceStateChanged)(const char* deviceId, int deviceType, int deviceState);
typedef void (*FUNC_OnCameraReady)();
typedef void (*FUNC_OnCameraFocusAreaChanged)(int x, int y, int width, int height);
typedef void (*FUNC_OnCameraExposureAreaChanged)(int x, int y, int width, int height);
typedef void (*FUNC_OnRemoteAudioMixingBegin)();
typedef void (*FUNC_OnRemoteAudioMixingEnd)();
typedef void (*FUNC_OnAudioEffectFinished)(int soundId);
typedef void (*FUNC_OnVideoDeviceStateChanged)(const char* deviceId, int deviceType, int deviceState);
typedef void (*FUNC_OnRemoteVideoStateChanged)(uid_t uid, int state, int reason, int elapsed);
typedef void (*FUNC_OnUserEnableLocalVideo)(uid_t uid, BOOL enabled);
typedef void (*FUNC_OnLocalPublishFallbackToAudioOnly)(BOOL isFallbackOrRecover);
typedef void (*FUNC_OnRemoteSubscribeFallbackToAudioOnly)(uid_t uid, BOOL isFallbackOrRecover);
typedef void (*FUNC_OnConnectionStateChanged)(int state, int reason);
typedef void (*FUNC_OnRtmpStreamingStateChanged)(const char* url, int state, int errCode);
typedef void (*FUNC_OnLocalUserRegistered)(uid_t uid, const char* userAccount);
typedef void (*FUNC_OnUserInfoUpdated)(uid_t uid, uid_t userUid, char* userAccount);
typedef void (*FUNC_OnLocalAudioStateChanged)(int state, int error);
typedef void (*FUNC_OnRemoteAudioStateChanged)(uid_t uid, int state, int reason, int elapsed);
typedef void (*FUNC_OnStreamInjectedStatus)(const char* url, uid_t uid, int status);
typedef void (*FUNC_OnChannelMediaRelayStateChanged)(int state, int code);
typedef void (*FUNC_OnChannelMediaRelayEvent)(int code);
typedef void (*FUNC_OnFacePositionChanged)(int imageWidth, int imageHeight, int x, int y, int width, int height, int vecDistance, int numFaces);
typedef void (*FUNC_OnChannelLocalPublishFallbackToAudioOnly)(const char* channelId, BOOL isFallbackOrRecover);
typedef void (*FUNC_OnAudioMixingStateChanged)(int audioMixingStateType, int audioMixingErrorType);
typedef void (*FUNC_OnFirstRemoteAudioDecoded)(uid_t uid, int elapsed);
typedef void (*FUNC_OnLocalVideoStateChanged)(int localVideoState, int error);
typedef void (*FUNC_OnNetworkTypeChanged)(int networkType);
typedef void (*FUNC_OnLastmileProbeResult)(int state, unsigned int upLinkPacketLossRate, unsigned int upLinkjitter, unsigned int upLinkAvailableBandwidth, unsigned int downLinkPacketLossRate, unsigned int downLinkJitter, unsigned int downLinkAvailableBandwidth, unsigned int rtt);
typedef void (*FUNC_OnTestEnd)();
struct RtcEventHandler {
    FUNC_OnJoinChannelSuccess onJoinChannelSuccess;
    FUNC_OnReJoinChannelSuccess onReJoinChannelSuccess;
    FUNC_OnLeaveChannel onLeaveChannel;
    FUNC_OnConnectionLost onConnectionLost;
    FUNC_OnConnectionInterrupted onConnectionInterrupted;
    FUNC_OnRequestToken onRequestToken;
    FUNC_OnUserJoined onUserJoined;
    FUNC_OnUserOffline onUserOffline;
    FUNC_OnAudioVolumeIndication onAudioVolumeIndication;
    FUNC_OnUserMuteAudio onUserMuteAudio;
    FUNC_OnWarning onWarning;
    FUNC_OnError onError;
    FUNC_OnRtcStats onRtcStats;
    FUNC_OnAudioMixingFinished onAudioMixingFinished;
    FUNC_OnAudioRouteChanged onAudioRouteChanged;
    FUNC_OnFirstRemoteVideoDecoded onFirstRemoteVideoDecoded;
    FUNC_OnVideoSizeChanged onVideoSizeChanged;
    FUNC_OnClientRoleChanged onClientRoleChanged;
    FUNC_OnUserMuteVideo onUserMuteVideo;
    FUNC_OnMicrophoneEnabled onMicrophoneEnabled;
    FUNC_OnApiExecuted onApiCallExecuted;
    FUNC_OnFirstLocalAudioFrame onFirstLocalAudioFrame;
    FUNC_OnFirstRemoteAudioFrame onFirstRemoteAudioFrame;
    FUNC_OnLastmileQuality onLastmileQuality;
    FUNC_OnAudioQuality onAudioQuality;
    FUNC_OnStreamInjectedStatus onStreamInjectedStatus;
    FUNC_OnStreamUnpublished onStreamUnpublished;
    FUNC_OnStreamPublished onStreamPublished;
    FUNC_OnStreamMessageError onStreamMessageError;
    FUNC_OnStreamMessage onStreamMessage;
    FUNC_OnConnectionBanned onConnectionBanned;
    FUNC_OnRemoteVideoTransportStats onRemoteVideoTransportStats;
    FUNC_OnRemoteAudioTransportStats onRemoteAudioTransportStats;
    FUNC_OnTranscodingUpdated onTranscodingUpdated;
    FUNC_OnAudioDeviceVolumeChanged onAudioDeviceVolumeChanged;
    FUNC_OnActiveSpeaker onActiveSpeaker;
    FUNC_OnMediaEngineStartCallSuccess onMediaEngineStartCallSuccess;
    FUNC_OnMediaEngineLoadSuccess onMediaEngineLoadSuccess;
    FUNC_OnConnectionStateChanged onConnectionStateChanged;
    FUNC_OnRemoteSubscribeFallbackToAudioOnly onRemoteSubscribeFallbackToAudioOnly;
    FUNC_OnLocalPublishFallbackToAudioOnly onLocalPublishFallbackToAudioOnly;
    FUNC_OnUserEnableLocalVideo onUserEnableLocalVideo;
    FUNC_OnRemoteVideoStateChanged onRemoteVideoStateChanged;
    FUNC_OnVideoDeviceStateChanged onVideoDeviceStateChanged;
    FUNC_OnAudioEffectFinished onAudioEffectFinished;
    FUNC_OnRemoteAudioMixingEnd onRemoteAudioMixingEnd;
    FUNC_OnRemoteAudioMixingBegin onRemoteAudioMixingBegin;
    FUNC_OnCameraExposureAreaChanged onCameraExposureAreaChanged;
    FUNC_OnCameraFocusAreaChanged onCameraFocusAreaChanged;
    FUNC_OnCameraReady onCameraReady;
    FUNC_OnAudioDeviceStateChanged onAudioDeviceStateChanged;
    FUNC_OnUserEnableVideo onUserEnableVideo;
    FUNC_OnFirstRemoteVideoFrame onFirstRemoteVideoFrame;
    FUNC_OnFirstLocalVideoFrame onFirstLocalVideoFrame;
    FUNC_OnRemoteAudioStats onRemoteAudioStats;
    FUNC_OnRemoteVideoStats onRemoteVideoStats;
    FUNC_OnLocalVideoStats onLocalVideoStats;
    FUNC_OnNetworkQuality onNetworkQuality;
    FUNC_OnTokenPrivilegeWillExpire onTokenPrivilegeWillExpire;
    FUNC_OnVideoStopped onVideoStopped;
    FUNC_OnAudioMixingStateChanged onAudioMixingStateChanged;
    FUNC_OnFirstRemoteAudioDecoded onFirstRemoteAudioDecoded;
    FUNC_OnLocalVideoStateChanged onLocalVideoStateChanged;
    FUNC_OnNetworkTypeChanged onNetworkTypeChanged;
    FUNC_OnRtmpStreamingStateChanged onRtmpStreamingStateChanged;
    FUNC_OnLastmileProbeResult onLastmileProbeResult;
    FUNC_OnLocalUserRegistered onLocalUserRegistered;
    FUNC_OnUserInfoUpdated onUserInfoUpdated;
    FUNC_OnLocalAudioStateChanged onLocalAudioStateChanged;
    FUNC_OnRemoteAudioStateChanged onRemoteAudioStateChanged;
    FUNC_OnLocalAudioStats onLocalAudioStats;
    FUNC_OnChannelMediaRelayStateChanged onChannelMediaRelayStateChanged;
    FUNC_OnChannelMediaRelayEvent onChannelMediaRelayEvent;
    FUNC_OnFacePositionChanged onFacePositionChanged;
    FUNC_OnTestEnd onTestEnd;
};
struct ChannelEventHandler {
    FUNC_OnChannelWarning onWarning;
    FUNC_OnChannelError onError;
    FUNC_OnChannelJoinChannelSuccess onJoinChannelSuccess;
    FUNC_OnChannelReJoinChannelSuccess onRejoinChannelSuccess;
    FUNC_OnChannelLeaveChannel onLeaveChannel;
    FUNC_OnChannelClientRoleChanged onClientRoleChanged;
    FUNC_OnChannelUserJoined onUserJoined;
    FUNC_OnChannelUserOffLine onUserOffLine;
    FUNC_OnChannelConnectionLost onConnectionLost;
    FUNC_OnChannelRequestToken onRequestToken;
    FUNC_OnChannelTokenPrivilegeWillExpire onTokenPrivilegeWillExpire;
    FUNC_OnChannelRtcStats onRtcStats;
    FUNC_OnChannelNetworkQuality onNetworkQuality;
    FUNC_OnChannelRemoteVideoStats onRemoteVideoStats;
    FUNC_OnChannelRemoteAudioStats onRemoteAudioStats;
    FUNC_OnChannelRemoteAudioStateChanged onRemoteAudioStateChanged;
    FUNC_OnChannelActiveSpeaker onActiveSpeaker;
    FUNC_OnChannelVideoSizeChanged onVideoSizeChanged;
    FUNC_OnChannelRemoteVideoStateChanged onRemoteVideoStateChanged;
    FUNC_OnChannelStreamMessage onStreamMessage;
    FUNC_OnChannelStreamMessageError onStreamMessageError;
    FUNC_OnChannelMediaRelayStateChanged2 onMediaRelayStateChanged;
    FUNC_OnChannelMediaRelayEvent2 onMediaRelayEvent;
    FUNC_OnChannelRtmpStreamingStateChanged onRtmpStreamingStateChanged;
    FUNC_OnChannelTranscodingUpdated onTranscodingUpdated;
    FUNC_OnChannelStreamInjectedStatus onStreamInjectedStatus;
    FUNC_OnChannelRemoteSubscribeFallbackToAudioOnly onRemoteSubscribeFallbackToAudioOnly;
    FUNC_OnChannelConnectionStateChanged onConnectionStateChanged;
    FUNC_OnChannelLocalPublishFallbackToAudioOnly onLocalPublishFallbackToAudioOnly;
    FUNC_OnChannelTestEnd onTestEnd;
};
typedef void* IVideoDeviceManager_ptr;
extern "C" DllExport enum ERROR_CODE
audio_device_startAudioDeviceLoopbackTest(void* apiBridge, enum DEVICE_TYPE type, int indicationInterval);
extern "C" DllExport enum ERROR_CODE
audio_device_stopAudioDeviceLoopbackTest(void* apiBridge, enum DEVICE_TYPE type);
extern "C" DllExport enum ERROR_CODE
startDeviceTest(IVideoDeviceManager_ptr apiBridge, view_t hwnd);
extern "C" DllExport enum ERROR_CODE
stopDeviceTest(IVideoDeviceManager_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
setDevice(IVideoDeviceManager_ptr apiBridge, const char deviceId[MAX_DEVICE_ID_LENGTH]);
extern "C" DllExport enum ERROR_CODE
getDevice(IVideoDeviceManager_ptr apiBridge, int index, char deviceName[MAX_DEVICE_ID_LENGTH], char deviceId[MAX_DEVICE_ID_LENGTH]);
extern "C" DllExport enum ERROR_CODE
getCurrentDevice(IVideoDeviceManager_ptr apiBridge, char deviceId[MAX_DEVICE_ID_LENGTH]);
extern "C" DllExport int
getDeviceCount(IVideoDeviceManager_ptr apiBridge);
//int
//channel_registerMediaMetadataObserver(IRtcChannelBridge_ptr apiBridge, IMetadataObserver *observer, rtc::IMetadataObserver::METADATA_TYPE type,  bool useSdkDefault = true);

//int
//channel_sendMetadata(rtc::IMetadataObserver::Metadata *metadata);
//
//int
//channel_setMaxMetadataSize(int size);

typedef void (*FUNC_APICaseHandler)(int apiType, const char *paramter);
extern "C" DllExport void begin_api_test(const char *caseFilePath,
                    FUNC_APICaseHandler apiCaseHandler);
extern "C" DllExport void compare_and_dump_api_test_result(const char *caseFilePath,
                                      const char *dumpFilePath,
                                      FUNC_APICaseHandler apiCaseHandler);
extern "C" DllExport void begin_rtc_engine_event_test(const char *caseFilePath,
                                 struct RtcEventHandler *eventHandler);
extern "C" DllExport void compare_dump_rtc_engine_event_test_result(const char *caseFilePath,
                                               const char *dumpFilePath,
                                               struct RtcEventHandler *eventHandler);
extern "C" DllExport void log_engine_event_case(const char *eventType, const char *parameter);
extern "C" DllExport void begin_channel_event_test(const char *caseFilePath, const char *channelId,
                              struct ChannelEventHandler *eventHandler);
extern "C" DllExport void compare_dump_channel_event_test_result(const char *caseFilePath,
                                            const char *dumpFilePath,
                                            const char *channelId,
                                            struct ChannelEventHandler *eventHandler);
extern "C" DllExport void log_channel_event_case(const char *eventType, const char *parameter);