OneToOneVideo/OneToOneVideo/agorartc/AgoraRtcApiNative.cs


        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE audio_device_startAudioDeviceLoopbackTest(IntPtr apiBridge, DEVICE_TYPE type,
            int indicationInterval);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE audio_device_stopAudioDeviceLoopbackTest(IntPtr apiBridge, DEVICE_TYPE type);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE startDeviceTest(IVideoDeviceManager_ptr apiBridge, view_t hwnd);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE stopDeviceTest(IVideoDeviceManager_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setDevice(IVideoDeviceManager_ptr apiBridge, string deviceId);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE getDevice(IVideoDeviceManager_ptr apiBridge, int index, string deviceName,
            string deviceId);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE getCurrentDevice(IVideoDeviceManager_ptr apiBridge, string deviceId);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int getDeviceCount(IVideoDeviceManager_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void begin_api_test(string caseFilePath,
            FUNC_APICaseHandler apiCaseHandler);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void compare_and_dump_api_test_result(string caseFilePath, string dumpFilePath,
            FUNC_APICaseHandler apiCaseHandler);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void begin_rtc_engine_event_test(string caseFilePath, RtcEventHandler eventHandler);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void compare_dump_rtc_engine_event_test_result(string caseFilePath, string dumpFilePath,
            RtcEventHandler eventHandler);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void log_engine_event_case(string eventType, string parameter);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void begin_channel_event_test(string caseFilePath, string channelId,
            ChannelEventHandler eventHandler);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void compare_dump_channel_event_test_result(string caseFilePath, string dumpFilePath,
            string channelId, ChannelEventHandler eventHandler);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void log_channel_event_case(string eventType, string parameter);
    }
}